Added $Id$ searching (again)

--- a/trunk/keys3.dtx
+++ b/trunk/keys3.dtx
@@ -13,7 +13,7 @@
 \RequirePackage{l3names}
 %</driver|package>
 %\fi
-\GetIdInfo$Id: keys3.dtx 1 2008-09-23 07:00:00Z joseph $
+\GetIdInfo$Id$
   {Key management for LaTeX3}
 %\iffalse
 %<*driver>
