Created keys3opts2 for processing LaTeX2e options with keys3

--- a/trunk/keys3.dtx
+++ b/trunk/keys3.dtx
@@ -824,6 +824,10 @@
 % suitable property names (suggestions |.multi set:n| and
 % |.multi bool:n| come to mind).
 %
+% Does the package need to provide something like
+% \cs{DisableKeyvalOption}? If so, does a method for globally disabling
+% keys need to be provided?
+%
 %\subsection{Implementation}
 %
 % The usual preliminaries.  The key--value parsing itself is handled by
