Added ID property to keys3opts2.dtx

--- a/trunk/keys3opts2.dtx
+++ b/trunk/keys3opts2.dtx
@@ -13,7 +13,7 @@
 \RequirePackage{l3names}
 %</driver|package>
 %\fi
-\GetIdInfo$Id: keys3opts2.dtx 8 2008-09-25 06:11:19Z josephwright $
+\GetIdInfo$Id$
   {Using keys3 for LaTeX2e options}
 %\iffalse
 %<*driver>
