Tidied up rename of .set to .tlp:N and .tlp:c Added .int:N and .int:c properties Added/tidied .tlp set eq:N and .int set eq:N

--- a/trunk/keys3-intro.ltx
+++ b/trunk/keys3-intro.ltx
@@ -223,6 +223,9 @@ module (if set).
     key two/.tlp:c = MyOtherMacro,
   }
 \end{verbatim}
+For integer values, the \verb|.int:N| and \verb|.int:c| 
+properties are also available. These work in the same way
+as the tlp versions.
 
 Creating Boolean keys works in the same way, with two
 variations \texttt{.boolean:N} and \texttt{.boolean:c}
